<resources>
    <string name="app_name">Twitter2.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Twitter</string>
    <string name="nav_header_subtitle">twitter.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="btn_Like">Like</string>
    <string name="btn_comment">comment</string>
    <string name="btn_share">share</string>
    <string name="tweet_text_content">tweet_text_content</string>
    <string name="tweet_profile_img">tweet_profile_img</string>
    <string name="tweetter_name">tweetter_name</string>
    <string name="tweet_date">tweet_date</string>
    <string name="tweet_likes_count">likes</string>
    <string name="tweet_comments_count">comments</string>
    <string name="tweet_shares_count">shares</string>
    <string name="tweet_shared_image">tweet shared image</string>
    <string name="btn_retweet">retweet</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nick_name">Nickname</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_up">Sign up</string>
    <string name="tweet">Tweet</string>
    <string name="whats_happening">Whats happening!</string>
    <string name="log_out">Log Out</string>
    <string name="ignore">"@"</string>
    <string name="profile">Profile</string>
    <string name="replyer_name">replyer_name</string>
    <string name="reply_text">Reply_text</string>

</resources>
